# gemini-stacktrace

./: .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  calculator.py  docker-compose.dev.yml  docker-compose.yml  install.sh  main.py  my_trace.txt  pyproject.toml  requirements.txt  setup.py
.devcontainer/: Dockerfile  devcontainer.json
.github/prompts/: gemini-stacktrace.md
.github/workflows/: ci.yml  packer-build.yml
docs/: codebase_search.md  implementation_guide.md
examples/: __init__.py  basic_usage.py  full_example.py
gemini_stacktrace/: __init__.py  agent.py  cli.py
gemini_stacktrace/models/: __init__.py  analysis.py  config.py
gemini_stacktrace/tools/: __init__.py  codebase_tools.py  stack_trace_parser.py  utils.py
packer/: README.md  docker.pkr.hcl
prompts/: auto-fix.md  auto-fix.seed  gemini-stacktrace.seed  mcp-server.md  mcp-server.seed
scripts/: build-docker.sh  dev.sh  fix-vscode-perms.sh  verify-poetry.sh
tests/: conftest.py  sample_stack_trace.txt  test_agent.py  test_cli.py  test_codebase_tools.py  test_stack_trace_parser.py
